# libCircularBuffer

./: CMakeLists.txt  CMakePresets.json  README.md
Inc/libCircularBuffer/: CircularBuffer.h  CircularBufferExt.h
Src/: CircularBuffer.c
Tests/UnitTest/: CMakeLists.txt  LibCircularBuffer.cpp  LibCircularBufferExt.cpp
